fix: fix header's positioning problem on Firefox (#522)

--- a/src/app/theme/admin-layout/admin-layout.component.scss
+++ b/src/app/theme/admin-layout/admin-layout.component.scss
@@ -118,6 +118,9 @@
   .matero-header {
     position: sticky;
     top: 0;
+    // Fix header's positioning problem on Firefox
+    // https://github.com/ng-matero/ng-matero/issues/522
+    display: block;
   }
 
   .matero-topmenu {
